Fix logo appearance on small screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,12 +103,10 @@ iframe {
 }
 
 
-@media only screen and (max-width: 905px) {
-
-  .css-1twb9xo {
-    display: flex !important;
+@media only screen and (min-width: 768px) and (max-width:905px) {
+  .logo {
+    display: none !important;
   }
-
 }
 
 @media only screen and (max-width:500px) {
